--- a/user_interface/index.html
+++ b/user_interface/index.html
@@ -146,8 +146,8 @@
                                 <div id="nodes1Container" class="panel panel-default no-bottom-margin small-left-margin">
                                     <div class="panel-heading">
                                         <div class="btn-group pull-right">
-                                        <button id="resizeTerms" type="button"
-                                            title="When activated, the terms are only partly shown"
+                                        <button id="nodes1" type="button"
+                                            title="When activated, token clusters are shown"
                                             class="btn btn-xs show-nodes-button" aria-label="When activated, token clusters are shown">
                                             <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                                         </button>
@@ -196,8 +196,8 @@
                             <div id="nodes2Container" class="panel panel-default no-bottom-margin small-left-margin">
                                 <div class="panel-heading">
                                       <div class="btn-group pull-right">
-                                    <button id="resizeTerms" type="button"
-                                        title="When activated, the terms are only partly shown"
+                                    <button id="nodes2" type="button"
+                                        title="When activated, token clusters are shown"
                                         class="btn btn-xs show-nodes-button" aria-label="When activated, token clusters are shown">
                                         <span class="glyphicon glyphicon-chevron-down" aria-hidden="true"></span>
                                     </button>
