Small layout fixes

--- a/user_interface/index.html
+++ b/user_interface/index.html
@@ -145,7 +145,7 @@
             <div id="nodes1ContainerColumn" class="col-xs-1 no-bottom-margin">
                                 <div id="nodes1Container" class="panel panel-default no-bottom-margin small-left-margin">
                                     <div class="panel-heading">
-                                        <div class="btn-group pull-right">
+                                        <div class="pull-right">
                                         <button id="nodes1" type="button"
                                             title="When activated, token clusters are shown"
                                             class="btn btn-xs show-nodes-button" aria-label="When activated, token clusters are shown">
